# cvaa

cc/haar_like/: haar_like.sln
cc/haar_like/haar_like/: data_argument.cpp  data_argument.h  haar_like.vcxproj  haar_like.vcxproj.filters  main.cpp
demo/: CMakeLists.txt  main.c  mat.c  mat.h
matlab/: conv_fft.m  dct_dim2.m  fft_apply.m  fft_test.m  fmt_converting.m  ft_rotate.m  img_add.m  img_multimply.m  img_regc_fft.m  img_sub.m
